# ProtoForge

./: .env.example  .env.joint.example  .git_commit_msg.txt  .gitignore  AI_REPAIR_PROMPT.md  Dockerfile  INTEGRATION.md  README.md  coverage.json  coverage.xml  docker-compose.joint.yml  docker-compose.simple.yml  docker-compose.yml  install.bat  pyproject.toml
.convergeloop/backups/20260709_091341/: pyproject.toml
.convergeloop/backups/20260709_091341/.loopengine/: patterns.json  persisted-workflow.json  stash_ref
.convergeloop/backups/20260709_091341/scripts/: diag_ethercat.py  diag_modbus_rtu.py  diag_mqtt.py  diag_profinet.py  run_s7_test.py
.convergeloop/backups/20260709_172931/: ANALYSIS_REPORT.md
.convergeloop/backups/20260709_172931/protoforge/: config.py  main.py
.convergeloop/backups/20260709_172931/scripts/: diag_ab.py  diag_fanuc.py  diag_gb28181.py  diag_opcda.py
.convergeloop/backups/20260709_201359/: ProtoForge_完整化修复提示语.md  仿真平台深度分析报告.md
.convergeloop/backups/20260709_201359/protoforge/: __main__.py
.convergeloop/backups/20260709_201359/scripts/: diag_modbus.py  diag_opcua.py
.convergeloop/backups/20260709_201455/: ProtoForge_最终修复报告.md  coverage.xml
.convergeloop/backups/20260709_201455/scripts/: diag_mc.py  (+2 more)
.convergeloop/backups/20260709_212721/: .env.example  .gitignore  coverage.json  coverage.xml  diag_push.py  pyproject.toml
.github/workflows/: check-consistency.yml  docker-publish.yml
.loopengine/: fileSnapshot.json  patterns.json  persisted-workflow.json  stash_ref
helm/protoforge/: values.yaml
k8s/: secrets.yaml
migrations/versions/: 002_add_audit_recordings_integration.py
protoforge/: cli.py  config.py  installer.py  main.py  mqtt_auth.py
protoforge/api/: __init__.py
protoforge/api/v1/: _helpers.py  auth.py  auth_routes.py  common.py  device_routes.py  edgelite_routes.py  fault_routes.py  forward_routes.py  integration.py  log_routes.py  protocol_routes.py  rate_limit.py  recorder_routes.py  router.py  scenario_routes.py  system_routes.py  template_routes.py  test_routes.py  webhook_routes.py
protoforge/audit/: exception_lint.py  schema_audit.py
protoforge/core/: __init__.py  _integration_legacy.py  audit.py  auth.py  behavior_models.py  collaboration.py  control_loop.py  defaults.py  demo.py  device.py  edgelite.py  engine.py  event_bus.py  failover.py  fault_injection.py  forward.py  generator.py  integration.py  log_bus.py  messages.py  network_sim.py  performance.py  quality.py  recorder.py  registry.py  scenario.py  state_machine.py  template.py  testing.py  timeseries.py  timeseries_replay.py  webhook.py
protoforge/core/fault/: __init__.py  injector.py  models.py  propagation.py
protoforge/core/integration/: __init__.py  auth.py  channel.py  manager.py  protocol.py  retry.py  state.py  validator.py
protoforge/db/: session.py
protoforge/grpc/: protoforge.proto  server.py
protoforge/models/: __init__.py  device.py  integration.py  protocol.py  scenario.py  template.py
protoforge/protocols/: __init__.py  base.py  behavior.py
protoforge/protocols/ab/: __init__.py  server.py
protoforge/protocols/bacnet/: server.py
protoforge/protocols/ethercat/: __init__.py  server.py
protoforge/protocols/fanuc/: server.py
protoforge/protocols/fins/: __init__.py  server.py
protoforge/protocols/gb28181/: __init__.py  rtp_streamer.py  server.py
protoforge/protocols/http/: server.py
protoforge/protocols/mc/: __init__.py  server.py
protoforge/protocols/modbus/: _common.py  rtu_server.py  server.py
protoforge/protocols/mqtt/: server.py
protoforge/protocols/mtconnect/: server.py
protoforge/protocols/opcda/: __init__.py  server.py
protoforge/protocols/opcua/: __init__.py  client.py  server.py
protoforge/protocols/profinet/: server.py
protoforge/protocols/s7/: __init__.py  server.py
protoforge/protocols/toledo/: server.py
protoforge/sdk/: __init__.py
protoforge/templates/bacnet/: chiller.json
protoforge/templates/ethercat/: io_terminal.json
protoforge/templates/fanuc/: 0i_tf.json
protoforge/templates/gb28181/: dvr.json  ip_camera.json
protoforge/templates/mc/: got_hmi.json  q03udv_plc.json
protoforge/templates/modbus/: gas_detector.json  generic_plc.json  power_meter.json  temp_sensor.json  vfd.json  water_meter.json
protoforge/templates/mqtt/: smart_light.json
protoforge/templates/opcua/: cnc_machine.json
protoforge/templates/profinet/: io_module.json  s7_1200_pn.json
protoforge/templates/s7/: et200.json  s7_1200.json  s7_1500.json  s7_300.json  servo_drive.json
scripts/: diag_bacnet.py  diag_mtconnect.py
sdk/csharp/: ProtoForgeClient.cs
sdk/go/protoforge/: client.go
sdk/java/: ProtoForgeClient.java
tests/: test_api.py  test_integration.py  test_phase3.py  test_phase4.py
web/src/: App.vue  api.js  constants.js  i18n.js  main.js  utils.js
web/src/components/: ChangePasswordModal.vue  EmptyState.vue
web/src/views/: Audit.vue  Backup.vue  Dashboard.vue  Devices.vue  Forward.vue  Integration.vue  Login.vue  Logs.vue  Marketplace.vue  Protocols.vue  Recorder.vue  ScenarioEditor.vue  Scenarios.vue  Settings.vue  Templates.vue  Testing.vue  Webhook.vue  Welcome.vue
(+162 files in other folders)
